crates/tests/libs/bindgen/data/error/positional_after_named/input.rdl

#[winrt]
mod Test {
    attribute FooAttribute { fn(value: u32); }

    #[Foo(named_prop = 1, 42)]
    class MyClass {}
}
        